kyverno/verifyImagePolicy-keyless.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-slsa-provenance-keyless
  annotations:
    policies.kyverno.io/title: Verify SLSA Provenance (Keyless)
    policies.kyverno.io/category: Software Supply Chain Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.8.3
    kyverno.io/kyverno-version: 1.9.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/description: >-
      Provenance is used to identify how an artifact was produced
      and from where it originated. SLSA provenance is an industry-standard
      method of representing that provenance. This policy verifies that an
      image has SLSA provenance and was signed by the expected subject and issuer
      when produced through GitHub Actions. It requires configuration based upon
      your own values.      
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  rules:
    - name: check-slsa-keyless
      match:
        any:
        - resources:
            kinds:
            - Pod
            - Deployment
            namespaces:
            - image-build
            - image-deploy
      verifyImages:
      - attestors:
        - count: 1
          entries:
          - keyless:
              issuer: "https://oidc-discovery.apps.ocp4.whatever.out-of-my-head.de"
              rekor:
                url: "https://rekor-server-openshift-operators.apps.ocp4.whatever.out-of-my-head.de"
        imageReferences:
          - "quay.io/stbenji/*"
